Filename: changelog.txt

1395028800 - Added a feature where when you add a new admin and you set the Modify Same User Level to No. That user/admin will not be able to modify/view other user logins with the same user level. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/controllers/go_user_ce.php
           - * application/views/go_user/go_user_main_ce.php
           - * js/go_user/go_user_ce.js
           - * js/go_user/go_user_panel1_ce.js

           - Fixed an issue when downloading leads that doesn't have custom fields. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/models/golist.php

           - Fixed an error on cluster widget when the query on table server_updater returns null. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/views/go_cluster_status.php

1394856000 - Fixed an issue when adding new carrier and leaving Server IP checked. It doesn't save the server's IP on the carrier's db. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/views/go_settings/go_carrier_wizard.php

           - Changed the first 4 digits of the username used when applying for a sippy account. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/controllers/go_carriers_ce.php

           - Added a query upon logging in to see if the username exist on go_login_type. If not, it will insert a new data. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/controllers/go_login.php


1394596800 - Fixed the adding of new phone extension using phone wizard and user wizard. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/controllers/go_user_ce.php
           - * application/views/go_settings/go_phone_wizard.php
